tests/transpiler/x/pas/dataset_where_filter.error
compile: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/transpiler/x/pas/dataset_where_filter.pas
dataset_where_filter.pas(18,15) Error: Identifier not found "name"
dataset_where_filter.pas(18,19) Fatal: Syntax error, ")" expected but ":" found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
